# GalaxyWitness

./: .pylintrc  .readthedocs.yaml  AUTHORS  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  techstack.md  techstack.yml
.github/workflows/: pylint.yml
GalaxyWitness/: __init__.py  __main__.py  alpha_complex.py  base_complex.py  downloader.py  witness_complex.py
data/: ansiname.txt  data.csv
docs/source/: clustering.rst  complexes.rst  conf.py  datasets.rst  description.rst  index.rst  usage.rst  witness_complex.rst
galaxywitness/: __init__.py  __main__.py  alpha_complex.py  ansi.txt  base_complex.py  clusterization.py  datasets.py  manual_density.py  rips_complex.py  tests.py  witness_complex.py
galaxywitness.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
galaxywitness/tests/: test_betti.py  test_tomato.py
