[tool.poetry]
name = "galaxywitness"
version = "0.2.3.1"
description = "Package for topological data analysis of the big data. It is attempt to study distribution of galaxies in the universe via TDA"
authors = ["David Miheev <me@davidkorol.life>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
matplotlib = "*"
gudhi = "*"
scikit-learn = "*"
pandas = "*"
astropy = "*"
plotly = "*"
Sphinx = "*"
sphinx-rtd-theme = "*"
tqdm = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
