[tool.poetry]
name = "galaxywitness"
version = "0.2.4"
description = "Package for topological data analysis of the big data. It is attempt to study distribution of galaxies in the universe via TDA"
authors = ["David Miheev <me@davidkorol.life>", "Artemii Shvetsov <myowneemail@gmail.com>", "Ivan Larin <rlar7007@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidosx/GalaxyWitness"
documentation = "https://galaxywitness.rtfd.io/"


[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
matplotlib = "*"
gudhi = "*"
scikit-learn = "*"
pandas = "*"
astropy = "*"
plotly = "*"
tqdm = "*"
pyvo = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
